syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

package user;

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  bool found = 4;
}

message ListUsersRequest {
}

message UsersList {
  repeated UserResponse users = 1;
}

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc ListUsers (ListUsersRequest) returns (UsersList);
}
